# darknet_ros

./: CMakeLists.txt  README.md  package.xml
action/: CheckForObjects.action
include/darknet_ros/: YoloObjectDetector.hpp  image_interface.h
src/: YoloObjectDetector.cpp  image_interface.cpp
test/: ObjectDetection.cpp
